--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <!-- Изменение размера изображения -->
                   <fieldset class="img-upload__scale  scale">
                     <button type="button" class="scale__control  scale__control--smaller">Уменьшить</button>
-                    <input type="text" class="scale__control  scale__control--value" value="55%" title="Image Scale" name="scale" readonly>
+                    <input type="text" class="scale__control  scale__control--value" value="100%" title="Image Scale" name="scale" readonly>
                     <button type="button" class="scale__control  scale__control--bigger">Увеличить</button>
                   </fieldset>
 
@@ -59,7 +59,7 @@
 
                   <!-- Изменение глубины эффекта, накладываемого на изображение -->
                   <fieldset class="img-upload__effect-level  effect-level">
-                    <input class="effect-level__value" type="number" name="effect-level">
+                    <input class="effect-level__value" type="number" step="any" name="effect-level" value="">
                     <div class="effect-level__slider"></div>
                   </fieldset>
 
@@ -122,11 +122,6 @@
                   </div>
                   <div class="img-upload__element">
                     <textarea class="text__description" name="description" placeholder="Ваш комментарий..." data-pristine-maxlength-message="Комментарий не может быть длиннее 140 символов" data-pristine-maxlength="140"></textarea>
-                    <div class="counter-block">
-                      <span class="counter-block__numbers">
-                        <span class="counter-block__dinamic-number">0</span> / 140
-                      </span>
-                    </div>
                   </div>
                 </fieldset>
 
