continue-doing-project-tasks

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Кекстаграм</title>
 </head>
 
-<body>
+<body class="body">
   <main>
 
     <!-- Фильтрация изображений от других пользователей -->
